# index-maker-rag

./: .gitignore  Indexing Chatbot.pptx  NOTES.md  README.md  makefile  pyproject.toml
chatbot_api/src/: main.py  main_IPYNB.ipynb  test.py
chatbot_api/src/agents/: index_rag_agent.py
chatbot_api/src/chains/: cypher_query_examples.py  index_cypher_chain.py  index_description_chain.py
chatbot_api/src/models/: index_rag_models.py
chatbot_api/src/utils/: parser.py  utils.py
chatbot_frontend/: custom_css.py  main.py
chatbot_frontend/utils/: frontend_utils.py
data_prep/: 1_data_load_to_sqlite.ipynb  2_data_transform.ipynb  3_data_load_to_graph_db.ipynb
data_prep/utils/: db_funcs.py  df_funcs.py  fmp_funcs.py  graph_db_funcs.py  urls.py
index_maker/: backtesting_funcs.py  index_maker.py  inputs.py  neo4j_fresh.py  price_funcs.py  reweight_funcs.py  util_funcs.py
storage/: playground.ipynb
